--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -12,9 +12,11 @@ builds:
     goos:
       - linux
       - windows
+      - darwin
     goarch:
       - 386
       - amd64
+      - arm64
 archives:
   - 
    files:
